Fix: 피드 응답 메타데이터 정합성 개선